--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+cycler==0.10.0
+kiwisolver==1.2.0
 matplotlib==3.3.0
 numpy==1.19.1
 pandas==1.1.0
+Pillow==7.2.0
 plotly==4.9.0
-seaborn==0.10.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+retrying==1.3.3
+six==1.15.0
 zipp==3.1.0
